fix: autozoom and prefix padding on ios

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -16,7 +16,7 @@
   }
 
   .terminal-prefix {
-    @apply text-neutral-400 pr-3;
+    @apply text-neutral-400 pr-2;
   }
 
   .terminal-output {
